--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,8 @@ a:hover{
     background: #000;
     padding: 0 127px;
     position: relative;
+    left: 0;
+    right: 0;
 }
 .navigation nav{
     float: left;
