--- a/css/style.css
+++ b/css/style.css
@@ -115,14 +115,21 @@ a:hover{
     padding-right: 0;
     margin-right: 0;
 }
-   /*block3-menu*/ 
-/*.mobile-menu{}*/
+  /*  BLOCK3  */
+.rel {
+    position: relative; 
+  }
+.mobile-menu{
+           
+            }
+
 .navigation{
-    background: #000;
+    background: rgba(0,0,0,.8);
     padding: 0 127px;
-    position: relative;
-    left: 0;
+    position: absolute;
+     left: 0;
     right: 0;
+    
 }
 .navigation nav{
     float: left;
@@ -149,3 +156,42 @@ nav li a:hover{
     line-height: 3.5;
     font-size: 19px;
 }
+    /*block4 slider*/
+.block4-carusel{
+  background: none;
+  padding: 0;
+  }
+.carusel img{  
+  width: 100%;
+  height: 638px;
+  /* по умолчанию inline, в ряде браузеров это даст лишнее пространство вокруг элементов */
+  display: block;
+}
+  .arrow {
+  position: absolute;
+  
+  /*background: #ddd;*/
+  /*border-radius: 15px;*/
+  /*border: 1px solid gray;*/
+  
+  /*line-height: 24px;*/
+  color: #fff;
+  display: block;
+}
+.arrow:focus {
+  outline: none;
+}
+.arrow:hover {
+  background: #ccc;
+  cursor: pointer;
+}
+.prev {
+  left: 0;
+}
+.next {
+  right: 100%;/*not know*/
+}
+.gallery {
+  width: 100%;
+  overflow: hidden;
+}      
