--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,20 @@ a:hover{
 .clearfix:after{
     clear: both;
 }
+ /*ROW*/
+    .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row: after{
+    visibility: hidden;
+        display: block;
+        font-size: 0;
+        content: " ";
+        clear: both;
+        height: 0; 
+    }
+                    
+    .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row,.block15-row { display: inline-block; }                    
+    .html .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row { height: 1% } 
+    .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row { display: block; }
+
 /*    HEADER   */
 .contacts-information{
     background: #ededed;
