--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
 }
-*, *:after, *:before {
+/*, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+}*/
 body{
     font: 400 14px/1.5 'Hind', sans-serif;
     color: #565655;
