--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ a:hover{
     padding: 29px 100px;
     background: #fff;
 }
+
 .logo{
     float: left;
     width: auto;
@@ -213,4 +214,45 @@ nav li a:hover{
 .gallery {
   width: 100%;
   overflow: hidden;
-}      
+} 
+    
+    
+    
+    
+    
+    
+    
+    
+.block6-logo-section2-contacts-information1-text-nav{
+	background: #bd2631; 
+	padding: 50px 10px;
+	}
+.block6-left-text-static-info{
+    float: left;
+}
+.block6-left-text-static-info p{
+    font-weight: 600;
+    color: #fff;
+}
+.block6-title{
+    font-size: 30px;
+}
+.block6-subtitle{
+    font-size: 24px;
+}
+.right-button{
+float: right;
+background: #ffffff;
+color: #333;
+border-radius: 3px;
+display: block;
+width: 120px;
+padding: 12px;
+margin: 0 45px;
+text-decoration: none;
+text-align: center;
+
+font-weight: bold;
+font-size: 18px;
+margin-top: 13px;
+}
