--- a/css/style.css
+++ b/css/style.css
@@ -206,10 +206,10 @@ nav li a:hover{
   cursor: pointer;
 }
 .prev {
-  left: 0;
+  left: 50px;
 }
 .next {
-  right: 100%;/*not know*/
+  right: 100px;/*not know*/
 }
 .gallery {
   width: 100%;
