--- a/css/style.css
+++ b/css/style.css
@@ -1,335 +1,316 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
+
 /*, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }*/
-body{
-    font: 400 14px/1.5 'Hind', sans-serif;
-    color: #565655;
-}
-ul{
-    list-style: none;
-}
-ul li{
-    display: inline-block;
-}
-a{
-    text-decoration: none;
-    color: #333;
-    -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -ms-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
 
+body {
+	font: 400 14px/1.5 'Hind', sans-serif;
+	color: #565655;
 }
-a:hover{
-    color: #222;
+ul {
+	list-style: none;
 }
-.clearfix:after,
-.clearfix:before{
-    display: table;
-    content: '';
+ul li {
+	display: inline-block;
 }
-.clearfix:after{
-    clear: both;
+a {
+	text-decoration: none;
+	color: #333;
+	-webkit-transition: all .2s;
+	-moz-transition: all .2s;
+	-ms-transition: all .2s;
+	-o-transition: all .2s;
+	transition: all .2s;
 }
- /*ROW*/
-    .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row: after{
-    visibility: hidden;
-        display: block;
-        font-size: 0;
-        content: " ";
-        clear: both;
-        height: 0; 
-    }
-                    
-    .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row,.block15-row { display: inline-block; }                    
-    .html .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row { height: 1% } 
-    .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row { display: block; }
+a:hover {
+	color: #222;
+}
+.clearfix:after, .clearfix:before {
+	display: table;
+	content: '';
+}
+.clearfix:after {
+	clear: both;
+}
+
+/*ROW*/
+
+.block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row: after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+}
+.block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row {
+	display: inline-block;
+}
+.html .block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row {
+	height: 1%
+}
+.block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-row {
+	display: block;
+}
 
 /*    HEADER   */
-.contacts-information{
-    background: #ededed;
-    padding: 13px 100px;
-}
-.address-block{
-    float: left;
-    padding-left: 35px;
-}
-.address-block div{
-    display: inline-block;
-    margin-right: 15px;
-}
-.social-icons{
-    float: right;
-    margin-top: 7px;
-}
-.social-icons ul li{
-    margin-left: 20px;
-}
-.fa-phone,
-.fa-location-arrow{
-    color: #000;
-}
-.city{
-    background: #000;
-    color: #fff;
-    border-radius: 3px;
-    padding: 6px 16px;
-}
-.fa-angle-down{
-    margin-left: 15px;
-    font-size: 18px;
-    margin-top: 2px;
-}
 
+.contacts-information {
+	background: #ededed;
+	padding: 13px 100px;
+}
+.address-block {
+	float: left;
+	padding-left: 35px;
+}
+.address-block div {
+	display: inline-block;
+	margin-right: 15px;
+}
+.social-icons {
+	float: right;
+	margin-top: 7px;
+}
+.social-icons ul li {
+	margin-left: 20px;
+}
+.fa-phone, .fa-location-arrow {
+	color: #000;
+}
+.city {
+	background: #000;
+	color: #fff;
+	border-radius: 3px;
+	padding: 6px 16px;
+}
+.fa-angle-down {
+	margin-left: 15px;
+	font-size: 18px;
+	margin-top: 2px;
+}
 
 /****   BLOCK2*******************************************2   */
-.logo-section{
-    padding: 29px 100px;
-    background: #fff;
-}
 
-.logo{
-    float: left;
-    width: auto;
-    height: 50px;  
-    padding-left: 130px;
-    padding-bottom: 55px;
-    padding-top: 35px;
+.logo-section {
+	padding: 29px 100px;
+	background: #fff;
+}
+.logo {
+	float: left;
+	width: auto;
+	height: 50px;
+	padding-left: 130px;
+	padding-bottom: 55px;
+	padding-top: 35px;
 }
 .block2-static-info {
-    float: right;
-    margin-top: 46px;
-    padding-right: 57px;
+	float: right;
+	margin-top: 46px;
+	padding-right: 57px;
 }
-.block2-title{
-    color: #000;
-    font-weight: 600;
-    font-size: 15px;
+.block2-title {
+	color: #000;
+	font-weight: 600;
+	font-size: 15px;
 }
-.block2-static-info li p:first-of-type{
-    float: left;
-    margin-right: 8px;
-    color: #000;
-    font-size: 18px;
+.block2-static-info li p:first-of-type {
+	float: left;
+	margin-right: 8px;
+	color: #000;
+	font-size: 18px;
 }
-.block2-static-info li p:last-of-type{
-    display: inline-block;
+.block2-static-info li p:last-of-type {
+	display: inline-block;
 }
-.block2-static-info p > span{
-    display: block;
+.block2-static-info p>span {
+	display: block;
 }
 .block2-static-info ul li {
-    padding-right: 8px;
-    border-right: 1px solid #e6e6e6;
-    margin-right: 20px;
-
-.block2-static-info ul li:last-of-type{
-    border-right: none;
-    padding-right: 0;
-    margin-right: 0;
-}
- /*  BLOCK3  */
-/*.rel {*/
-#slider{ 
-    position: relative;
-    overflow: hidden;     
-  }
-.mobile-menu{
-           
-            }
-
-.navigation{
-    background: rgba(0,0,0,.8);
-    padding: 0 127px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    
-}
-.navigation nav{
-    float: left;
-}
-nav li a{
-    color: #fff;
-    font-size: 16px;
-    padding: 24px 16px 16px;
-    display: inline-block;
-    text-transform: uppercase;
-    border-bottom: 7px solid transparent;
-}
-nav li a:hover{
-    color: #fff;
-    border-bottom: 6px solid #bd2631;
-}
-.current a{
-    border-bottom: 6px solid #bd2631;
-
-}
-.search{
-    float: right;
-    color: #fff;
-    line-height: 3.5;
-    font-size: 19px;
-}
-<!--BLOCK4-->
- 
- .block4-carusel{
-     background: none;
-     width: 100%;
-     height: 638px;
-     padding: 0;
- }       
- .carusel img{       
-  
-  /* по умолчанию inline, в ряде браузеров это даст лишнее пространство вокруг элементов */
-  
-    width: 100%;
-    height: auto;
-    display: block;
-}
-.arrow{
-position: absolute;
-width: 0;/*27px*/
-height: 0;/*27px*/
-top: 53%;
-/*background: rgba(0,0,0,.8);*/
-opacity: 0;
-transition: 0.3s ease;
-padding: 0;
-font-size: 43px;
-
-}
-/*.arrow:focus {
+	padding-right: 8px;
+	border-right: 1px solid #e6e6e6;
+	margin-right: 20px;
+	.block2-static-info ul li:last-of-type {
+		border-right: none;
+		padding-right: 0;
+		margin-right: 0;
+	}
+	/*  BLOCK3  */
+	/*.rel {*/
+	#slider {
+		position: relative;
+		overflow: hidden;
+	}
+	.mobile-menu {}
+	.navigation {
+		background: rgba(0, 0, 0, .8);
+		padding: 0 127px;
+		position: absolute;
+		left: 0;
+		right: 0;
+	}
+	.navigation nav {
+		float: left;
+	}
+	nav li a {
+		color: #fff;
+		font-size: 16px;
+		padding: 24px 16px 16px;
+		display: inline-block;
+		text-transform: uppercase;
+		border-bottom: 7px solid transparent;
+	}
+	nav li a:hover {
+		color: #fff;
+		border-bottom: 6px solid #bd2631;
+	}
+	.current a {
+		border-bottom: 6px solid #bd2631;
+	}
+	.search {
+		float: right;
+		color: #fff;
+		line-height: 3.5;
+		font-size: 19px;
+	}
+	<!--BLOCK4-->.block4-carusel {
+		background: none;
+		width: 100%;
+		height: 638px;
+		padding: 0;
+	}
+	.carusel img {
+		/* по умолчанию inline, в ряде браузеров это даст лишнее пространство вокруг элементов */
+		width: 100%;
+		height: auto;
+		display: block;
+	}
+	.arrow {
+		position: absolute;
+		width: 0;
+		/*27px*/
+		height: 0;
+		/*27px*/
+		top: 53%;
+		/*background: rgba(0,0,0,.8);*/
+		opacity: 0;
+		transition: 0.3s ease;
+		padding: 0;
+		font-size: 43px;
+	}
+	/*.arrow:focus {
   outline: none;
 }*/
-.arrow:hover {
-cursor: pointer;	
-/*  background: rgba(0,0,0,.8);  
+	.arrow:hover {
+		cursor: pointer;
+		/*  background: rgba(0,0,0,.8);  
 top: 255px;	
 width: 27px;
 height:  27px;
 padding: 10px;*/
-}	    
-
-.left{
-    left: -20px;
- }
-
-.right{
-    right: -20px;
-}
-
-#slider:hover .left{
-    left: 20px;
-    opacity: 1;
-}
-
-#slider:hover .right{
-    right: 20px;
-    opacity: 1;
-}
-
-.gallery {
-  width: 100%;
-  overflow: hidden;
-} 
-/*.but*/
-.but{
-margin-right: 57px;
-padding: 0; 
-        }
-        .fa fa-angle-left{
-            float:  left;
-            margin-left: 57px;
-            height: 43px;
-            width: 25px;
-        }
-        .fa fa-angle-right{
-            float: right;
-            margin-right: 27px;
-            height: 43px;
-            width: 25px;
-        }
-	    
-
-.block4-example2 {       
-position:absolute;
-top: 270px;
-bottom: 0;
-right: 0;
-left: 130px;
-padding-left: 115px:
-padding-top: 222px;
-float: left;	
-}
-.block4-example2 p{    
-   margin-bottom: 20px;
-}                     
-.block4-title-red{ 
-    margin-bottom: 62px;    
-    color: red;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 32px;
-    font-weight: bold;	 
- }        
-.block4-title{
-    color:#FFF;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:43px;
-    font-weight: bold;      
- }  
-.block4-title-last{ 
-    margin-top: 52px;
-    color:#FFF;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:24px;
-    text-transform: uppercase;
-       
- }      
-    
-.block6-logo-section2-contacts-information1-text-nav{
-	background: #bd2631; 
-	padding: 30px 1px 34px 1px;
 	}
-.block6-left-text-static-info{
-    float: left;
-}
-.block6-left-text-static-info p{
-font-weight: 0;
-color: #fff;
-padding-left: 138px;
-}
-.block6-title{
-    font-size: 30px;
-}
-.block6-subtitle{
-    font-size: 24px;
-}
-	    
-.right-button{	
-float: right;
-background: #ffffff;
-color: #333;
-border-radius: 3px;
-display: block;
-width: 105px;
-padding: 12px;
-margin: 0 25px;
-text-decoration: none;
-text-align: center;
-
-font-weight: bold;
-font-size: 18px;
-margin-top: 13px;
-}    
-    
-    
-    
-    
+	.left {
+		left: -20px;
+	}
+	.right {
+		right: -20px;
+	}
+	#slider:hover .left {
+		left: 20px;
+		opacity: 1;
+	}
+	#slider:hover .right {
+		right: 20px;
+		opacity: 1;
+	}
+	.gallery {
+		width: 100%;
+		overflow: hidden;
+	}
+	/*.but*/
+	.but {
+		margin-right: 57px;
+		padding: 0;
+	}
+	.fa fa-angle-left {
+		float: left;
+		margin-left: 57px;
+		height: 43px;
+		width: 25px;
+	}
+	.fa fa-angle-right {
+		float: right;
+		margin-right: 27px;
+		height: 43px;
+		width: 25px;
+	}
+	.block4-example2 {
+		position: absolute;
+		top: 270px;
+		bottom: 0;
+		right: 0;
+		left: 130px;
+		padding-left: 115px: padding-top: 222px;
+		float: left;
+	}
+	.block4-example2 p {
+		margin-bottom: 20px;
+	}
+	.block4-title-red {
+		margin-bottom: 62px;
+		color: red;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 32px;
+		font-weight: bold;
+	}
+	.block4-title {
+		color: #FFF;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 43px;
+		font-weight: bold;
+	}
+	.block4-title-last {
+		margin-top: 52px;
+		color: #FFF;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 24px;
+		text-transform: uppercase;
+	}
+	.block6-logo-section2-contacts-information1-text-nav {
+		background: #bd2631;
+		padding: 30px 1px 34px 1px;
+	}
+	.block6-left-text-static-info {
+		float: left;
+	}
+	.block6-left-text-static-info p {
+		font-weight: 0;
+		color: #fff;
+		padding-left: 138px;
+	}
+	.block6-title {
+		font-size: 30px;
+	}
+	.block6-subtitle {
+		font-size: 24px;
+	}
+	.right-button {
+		float: right;
+		background: #ffffff;
+		color: #333;
+		border-radius: 3px;
+		display: block;
+		width: 105px;
+		padding: 12px;
+		margin: 0 25px;
+		text-decoration: none;
+		text-align: center;
+		font-weight: bold;
+		font-size: 18px;
+		margin-top: 13px;
+	}	
