--- a/css/style.css
+++ b/css/style.css
@@ -317,3 +317,107 @@ padding: 10px;*/
 		font-size: 18px;
 		margin-top: 13px;
 	}	
+	/*   RESPONSIVE   */
+	/*@ -1---*//*
+	.mobile-menu{
+	   color: #fff;
+	   font-size: 24px;
+	   margin-top: 20px;
+	   display: none;
+	   cursor: pointer;
+	}
+	   
+	.fa:before{
+	color: #111; /*черный цвет
+	font-size:12px /*размер иконки 12 пикселей в ширину и высоту
+	}
+	*/
+	@media screen and (max-width: 1060px){
+	   .logo,
+	   .static-info{
+	       float: none;
+	   }
+	   .logo-section{
+	       text-align: center;
+	   }
+	}
+	@media screen and (max-width: 995px){
+	   .block{
+	       padding-right: 40px;
+	       padding-left: 40px;
+	   }
+	   nav li a{
+	       font-size: 14px;
+	       padding: 24px 12px 16px;
+	   }
+	}
+	@media screen and (max-width: 760px){
+	   .navigation{
+	       position: relative;
+	   }
+	   div.phone,
+	   div.address{
+	       display: block;
+	       margin: 10px 0;
+	   }
+	   nav ul{
+	       display: none;
+	       position: absolute;
+	       background: #000;
+	       top: 66px;
+	       left: 0;
+	       width: 100%;
+	       padding: 0 50px;
+	       box-sizing: border-box;
+	   }
+	   .mobile-menu{
+	       display: block;
+	   }
+	   #menu li{
+	       display: block;
+	       padding: 10px 0;
+	       border-bottom: 1px solid #e6e6e6;
+	   }
+	   #menu li a,
+	   #menu li a:hover{
+	       border-bottom: none;
+	   }
+	   #menu li a{
+	       padding: 0;
+	   }
+	   #menu li:last-of-type{
+	       border-bottom: none;
+	   }
+	}
+	@media screen and (max-width: 570px){
+	   .static-info ul li{
+	       display: block;
+	       padding-right: 0;
+	       margin: 10px 0;
+	       border: none;
+	       width: 160px;
+	       text-align: left;
+	   }
+	}
+	@media screen and (max-width: 440px){
+	   .contacts-information > div {
+	       float: none;
+	   }
+	   .social-icons ul li {
+	        margin: 0 20px 0 0;
+	   }
+	   .logo img{
+	       width: 100%;
+	       height: auto;
+	   }
+	}
+	@media screen and (max-width: 390px) {
+	   .block {
+	       padding-right: 20px;
+	       padding-left: 20px;
+	   }
+	   nav ul{
+	       padding: 0 20px;
+	   }
+	}
+	
