--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ padding: 10px;*/
 	}
 	.block4-example2 {
 		position: absolute;
-		top: 270px;
+		top: 282px;
 		bottom: 0;
 		right: 0;
 		left: 130px;
@@ -262,10 +262,10 @@ padding: 10px;*/
 		float: left;
 	}
 	.block4-example2 p {
-		margin-bottom: 20px;
+		margin-bottom: 0;
 	}
 	.block4-title-red {
-		margin-bottom: 62px;
+		margin-bottom: 0;
 		color: red;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 32px;
@@ -278,7 +278,7 @@ padding: 10px;*/
 		font-weight: bold;
 	}
 	.block4-title-last {
-		margin-top: 52px;
+		margin-top: 0;
 		color: #FFF;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 24px;
