--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,81 @@ padding: 10px;*/
 		font-weight: bold;
 		font-size: 18px;
 		margin-top: 13px;
-	}	
+	}
+	/*block 7*/
+
+.block7-content-pic-pic-pic, .block8-content-pic-pic-pic, .block9-content-pic-pic-pic {
+	background: none;
+	padding: 0;
+	margin: 0;
+	
+}
+#black {
+	background: color: #000;
+	width: 100%;
+	float: left;
+	min-height: 452px;
+}
+.block7-inner-content-pic-pic-pic, .block8-inner-content-pic-pic-pic, .block9-inner-content-pic-pic-pic {
+	width: 100%;
+	float: left;
+	height: 425px;
+}
+.content50-pic-pic-pic {
+	width: 50%;
+	float: left;
+	position: relative;
+}
+.content25-pic-pic-pic {
+	width: 25%;
+	float: left;
+}
+.inner-content25-pic-pic-pic img {
+	width: 100%;
+	height: auto;
+	display: block;
+	margin-bottom: 0;
+}
+.inner-content50-pic-pic-pic img {
+	width: 100%;
+	height: auto;
+	display: block;
+	margin-bottom: 0;
+}
+.block789-example-left {
+	float: left;
+	position: absolute;
+	top: 160px;
+	bottom: 0;
+	right: 0;
+	left: 40px;
+}
+.block789-example-left p {
+	margin-bottom: 0;
+}
+.block789-example-right {
+	float: right;
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding-right: 20px: 
+	padding-top: 118px;
+}
+.block789-example-right p {
+	margin-bottom: 0;
+}
+.block789-title-red {
+	margin-bottom: 0;
+	margin-right: 0;
+	color: red;
+	font-size: 30px;
+}
+.block789-title {
+	margin-right: 0;
+	color: #fff;
+	font-size: 14px;
+	margin-top: 20px;
+}
 	/*   RESPONSIVE   */
 	/*@ -1---*//*
 	.mobile-menu{
